Initial new feature of confetti and fix some pictures not showing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,6 +22,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 1;
 }
 
 img {
